Trying out circleci for chianti

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,9 +20,9 @@ jobs:
     steps:
       - add_ssh_keys:
           fingerprints:
-            - "3a:c8:f5:d7:b1:d5:51:d6:70:cf:4b:d2:9b:60:3d:44"
+            - "22:a5:e1:d5:16:a7:f3:fe:45:8e:d8:80:55:48:a6:3e"
       - merge-branch:
-          branch: plavac
+          branch: chianti
 
 workflows:
 
