trying with new key

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ commands:
         type: string
     steps:
       - run:
-          name: Checkout Code-(esmf-test-artifacts)
+          name: Checkout Code (esmf-test-artifacts)
           command: mkdir -p ~/.ssh;echo "Host *" > ~/.ssh/config; echo "  StrictHostKeyChecking no" >> ~/.ssh/config;git clone -b ${CIRCLE_BRANCH} git@github.com:esmf-org/esmf-test-artifacts.git
       - run:
           name: run scripts
