trying different docker image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,10 +8,10 @@ commands:
     steps:
       - run:
           name: Checkout Code (esmf-test-artifacts)
-          command: mkdir -p ~/.ssh;echo "Host *" > ~/.ssh/config; echo "  StrictHostKeyChecking no" >> ~/.ssh/config;cd ~;echo $PWD;git clone -b ${CIRCLE_BRANCH} git@github.com:esmf-org/esmf-test-artifacts.git
+          command: mkdir -p ~/.ssh;echo "Host *" > ~/.ssh/config; echo "  StrictHostKeyChecking no" >> ~/.ssh/config;cd ~;echo $PWD;git clone -b ${CIRCLE_BRANCH} git@github.com:esmf-org/esmf-test-artifacts.git;echo $PWD
       - run:
           name: run scripts
-          command: cd ~/esmf-test-artifacts;./.circleci/runscp.sh
+          command: cd ~;echo $PWD;ls;cd esmf-test-artifacts;./.circleci/runscp.sh
 
 jobs:
   mt-test:
