trying again with path changes

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ commands:
 jobs:
   mt-test:
     docker:
-      - image: docker:stable-git
+      - image: circleci/docker:stable-git
     steps:
       - add_ssh_keys:
           fingerprints:
