--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ commands:
 jobs:
   mt-test:
     docker:
-      - image: circleci/docker@1.5.0
+      - image: cimg/base:stable-20.04
     steps:
       - add_ssh_keys:
           fingerprints:
