trying again with path changes

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,7 @@ jobs:
   mt-test:
     docker:
       - image: cimg/base:stable-20.04
+    resource_class: large
     steps:
       - add_ssh_keys:
           fingerprints:
